--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.12",
-    "@angular/cdk": "",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~9.1.12",
     "@angular/compiler": "~9.1.12",
     "@angular/core": "~9.1.12",
