--- a/angular.json
+++ b/angular.json
@@ -29,11 +29,12 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/styles.scss",
               "src/assets/theme/base.scss",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/@fortawesome/fontawesome-free/js/all.js"]
           },
           "configurations": {
             "production": {
