--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-ru/common": "^14.64.2",
     "@angular/animations": "~10.1.6",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^10.2.5",
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
-    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.6",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
-    "hammerjs": "^2.0.8",
-    "rxjs": "~6.6.3",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@ngxs-labs/data": "^2.4.1",
     "@ngxs/storage-plugin": "3.6.2",
     "@ngxs/store": "3.6.2",
-    "immer": "7.0.9"
+    "immer": "7.0.9",
+    "ngx-auto-unsubscribe": "^3.0.1",
+    "rxjs": "~6.6.3",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.7",
