--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngxs/storage-plugin": "3.6.2",
     "@ngxs/store": "3.6.2",
     "immer": "7.0.9",
+    "ng-animate": "^0.3.4",
     "ngx-auto-unsubscribe": "^3.0.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
