--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngxs/storage-plugin": "3.6.2",
     "@ngxs/store": "3.6.2",
     "immer": "7.0.9",
+    "microsoft-adal-angular6": "^1.3.0",
     "ng-animate": "^0.3.4",
     "ngx-auto-unsubscribe": "^3.0.1",
     "rxjs": "~6.6.3",
