--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngxs/store": "3.6.2",
     "immer": "7.0.9",
     "microsoft-adal-angular6": "^1.3.0",
+    "moment": "^2.29.1",
     "ng-animate": "^0.3.4",
     "ngx-auto-unsubscribe": "^3.0.1",
     "rxjs": "~6.6.3",
