--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.29.1",
     "ng-animate": "^0.3.4",
     "ngx-auto-unsubscribe": "^3.0.1",
+    "ngx-custom-validators": "^10.0.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
