--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only firestore,functions",
+    "serve": "npm run build && firebase emulators:start --only firestore,functions,auth",
     "serve-all": "npm run build && firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -16,8 +16,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "@types/stripe-v3": "^3.1.26",
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-admin": "^10.0.0",
+    "firebase-functions": "^3.15.7"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.4",
@@ -29,9 +29,9 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "express": "4.17.1",
-    "firebase-admin": "^9.12.0",
+    "firebase-admin": "^10.0.0",
     "firebase-functions": "^3.15.7",
-    "firebase-functions-test": "^0.2.0",
+    "firebase-functions-test": "^0.3.3",
     "nodemailer": "^6.7.0",
     "rxjs": "^7.4.0",
     "stripe": "8.181.0",
