--- a/functions/package.json
+++ b/functions/package.json
@@ -4,6 +4,7 @@
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
     "serve": "npm run build && firebase emulators:start --only firestore,functions,auth",
+    "serve-seed": "npx ts-node emulatorseed.ts",
     "serve-all": "npm run build && firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -15,7 +16,9 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/faker": "^5.5.9",
     "@types/stripe-v3": "^3.1.26",
+    "faker": "5.5.3",
     "firebase-admin": "^10.0.0",
     "firebase-functions": "^3.15.7"
   },
