--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
     "@angular/router": "~11.2.9",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ngx-translate/core": "^13.0.0",
-    "@ngxs-labs/data": "5.0.0",
-    "@ngxs/storage-plugin": "3.7.1",
-    "@ngxs/store": "3.7.1",
+    "@ngxs-labs/data": "4.0.0",
+    "@ngxs/devtools-plugin": "^3.7.1",
+    "@ngxs/storage-plugin": "^3.7.1",
+    "@ngxs/store": "^3.7.1",
     "@stripe/stripe-js": "^1.19.1",
     "angular-oauth2-oidc": "^10.0.3",
     "firebase": "^8.0",
