--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-ru/common": "^14.64.2",
+    "@angular-ru/cdk": "^12.30.0",
+    "@angular-ru/ngxs": "^12.27.0",
     "@angular/animations": "~11.2.9",
     "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.9",
@@ -44,10 +45,9 @@
     "@angular/router": "~11.2.9",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ngx-translate/core": "^13.0.0",
-    "@ngxs-labs/data": "4.0.0",
-    "@ngxs/devtools-plugin": "^3.7.1",
-    "@ngxs/storage-plugin": "^3.7.1",
-    "@ngxs/store": "^3.7.1",
+    "@ngxs/devtools-plugin": "^3.7.2",
+    "@ngxs/storage-plugin": "^3.7.2",
+    "@ngxs/store": "^3.7.2",
     "@stripe/stripe-js": "^1.19.1",
     "angular-oauth2-oidc": "^10.0.3",
     "firebase": "^8.0",
@@ -85,7 +85,7 @@
     "tailwindcss": "^1.9.4",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.3",
+    "typescript": "~4.1.0",
     "@angular-devkit/architect": ">= 0.900 < 0.1300",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
