--- a/functions/package.json
+++ b/functions/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@types/faker": "^5.5.9",
     "@types/stripe-v3": "^3.1.26",
+    "axios": "0.21.4",
     "faker": "5.5.3",
     "firebase-admin": "^10.0.0",
-    "firebase-functions": "^3.15.7"
+    "firebase-functions": "^3.15.7",
+    "plaid": "9.9.0"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.4",
