--- a/functions/.runtimeconfig.json
+++ b/functions/.runtimeconfig.json
@@ -4,6 +4,7 @@
     "email": "lneninger@hipalanet.com"
   },
   "stripe":{
+    "apiVersion": "2020-08-27",
     "publicKey": "pk_test_iOFzxDfz6HHS7YLCWKlHrzIK005l1FQE5O",
     "secretKey": "sk_test_v20NmZyNCFKN87UaFEQLaZPX00YJdX1NC6"
   },
