--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "e2e": "ng e2e",
     "global-packages": "npm list -g --depth 0",
     "publish": "npm run build-prod && firebase deploy --only hosting",
-    "port-process": "netstat -a -n -o | find 'port'",
+    "port-process": "netstat -a -n -o | find \"port\"",
     "kill-process": "taskkill /F /PID pid_number"
   },
   "private": true,
