--- a/functions/.runtimeconfig.json
+++ b/functions/.runtimeconfig.json
@@ -4,12 +4,12 @@
     "email": "lneninger@hipalanet.com"
   },
   "stripe":{
-    "apiVersion": "2020-08-27",
-    "publicKey": "pk_test_iOFzxDfz6HHS7YLCWKlHrzIK005l1FQE5O",
-    "secretKey": "sk_test_v20NmZyNCFKN87UaFEQLaZPX00YJdX1NC6"
+    "apiversion": "2020-08-27",
+    "publickey": "pk_test_iOFzxDfz6HHS7YLCWKlHrzIK005l1FQE5O",
+    "secretkey": "sk_test_v20NmZyNCFKN87UaFEQLaZPX00YJdX1NC6"
   },
   "plaid": {
-    "clientId": "5cdf1d3cd4530d0013fb9740",
+    "clientid": "5cdf1d3cd4530d0013fb9740",
     "secret": "e307ccb34265035d22d1639a7415d5"
   }
 }
