--- a/functions/package.json
+++ b/functions/package.json
@@ -3,13 +3,15 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only firestore,functions,auth",
+    "build:watch": "tsc --watch --preserveWatchOutput",
+    "serve": "npm run build:watch | firebase emulators:start --only firestore,functions,auth",
     "serve-seed": "npx ts-node emulatorseed.ts",
-    "serve-all": "npm run build && firebase emulators:start",
+    "serve-all": "npm run build:watch && firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase functions:config:set gmail.password=\"hiphop-usa2015\" gmail.email=\"lneninger@hipalanet.com\" stripe.apiversion=\"2020-08-27\" stripe.publickey=\"pk_test_iOFzxDfz6HHS7YLCWKlHrzIK005l1FQE5O\" stripe.secretkey=\"sk_test_v20NmZyNCFKN87UaFEQLaZPX00YJdX1NC6\" plaid.clientid=\"5cdf1d3cd4530d0013fb9740\" stripe.secret=\"e307ccb34265035d22d1639a7415d5\" && firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "set-configuration": "firebase functions:config:get > .runtimeconfig.json"
   },
   "engines": {
     "node": "14"
