--- a/angular.json
+++ b/angular.json
@@ -29,12 +29,11 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/styles.scss",
               "src/assets/theme/base.scss",
               "src/styles.css"
             ],
-            "scripts": [ "node_modules/@fortawesome/fontawesome-free/js/all.js" ]
+            "scripts": []
           },
           "configurations": {
             "production": {
