--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
   "dependencies": {
     "@angular-ru/cdk": "^12.30.0",
     "@angular-ru/ngxs": "^12.27.0",
-    "@angular/animations": "~11.2.9",
-    "@angular/cdk": "^11.2.8",
-    "@angular/common": "~11.2.9",
-    "@angular/compiler": "~11.2.9",
-    "@angular/core": "~11.2.9",
-    "@angular/fire": "^6.1.5",
-    "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.2.9",
-    "@angular/material": "^11.2.8",
-    "@angular/material-moment-adapter": "^11.0.3",
-    "@angular/platform-browser": "~11.2.9",
-    "@angular/platform-browser-dynamic": "~11.2.9",
-    "@angular/router": "~11.2.9",
+    "@angular/animations": "~13.1.3",
+    "@angular/cdk": "^13.1.3",
+    "@angular/common": "~13.1.3",
+    "@angular/compiler": "~13.1.3",
+    "@angular/core": "~13.1.3",
+    "@angular/fire": "^7.0.4",
+    "@angular/flex-layout": "^13.0.0-beta.36",
+    "@angular/forms": "~13.1.3",
+    "@angular/material": "^13.1.3",
+    "@angular/material-moment-adapter": "^13.1.3",
+    "@angular/platform-browser": "~13.1.3",
+    "@angular/platform-browser-dynamic": "~13.1.3",
+    "@angular/router": "~13.1.3",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngxs/devtools-plugin": "^3.7.2",
@@ -52,48 +52,48 @@
     "@ngxs/store": "^3.7.2",
     "@stripe/stripe-js": "^1.19.1",
     "angular-oauth2-oidc": "^10.0.3",
-    "firebase": "^8.0",
-    "immer": "8.0.0",
+    "firebase": "^9.6.4",
+    "immer": "^8.0.4",
     "libphonenumber-js": "^1.8.5",
     "moment": "^2.29.1",
-    "ng-animate": "^0.3.4",
+    "ng-animate": "^1.0.0",
     "ngx-auto-unsubscribe": "^3.0.1",
     "ngx-awesome-uploader": "^10.0.4",
     "ngx-custom-validators": "^8.0.0",
     "ngx-plaid-link": "^1.0.3",
     "ngx-stripe": "^11.1.0",
-    "rxjs": "~6.6.3",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "~7.5.2",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.7",
-    "@angular/cli": "~11.2.8",
-    "@angular/compiler-cli": "~11.2.9",
-    "@angular/language-service": "~11.2.9",
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
+    "@angular-devkit/build-angular": "^0.901.13",
+    "@angular/cli": "~13.1.4",
+    "@angular/compiler-cli": "~13.1.3",
+    "@angular/language-service": "~13.1.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^17.0.10",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "npm-run-all": "^4.1.5",
-    "protractor": "~7.0.0",
-    "tailwindcss": "^3.0.13",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.0",
-    "@angular-devkit/architect": ">= 0.900 < 0.1300",
-    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "firebase-tools": "^10.1.2",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
+    "inquirer": "^8.2.0",
     "inquirer-autocomplete-prompt": "^1.0.1",
+    "jasmine-core": "~4.0.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "jsonc-parser": "^3.0.0",
+    "karma": "~6.3.11",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "npm-run-all": "~4.1.5",
     "open": "^7.0.3",
-    "jsonc-parser": "^3.0.0"
+    "protractor": "~7.0.0",
+    "tailwindcss": "^3.0.15",
+    "ts-node": "~10.4.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.5.5"
   }
 }
