--- a/functions/package.json
+++ b/functions/package.json
@@ -11,12 +11,13 @@
     "start": "npm run shell",
     "deploy": "firebase functions:config:set gmail.password=\"hiphop-usa2015\" gmail.email=\"lneninger@hipalanet.com\" stripe.apiversion=\"2020-08-27\" stripe.publickey=\"pk_test_iOFzxDfz6HHS7YLCWKlHrzIK005l1FQE5O\" stripe.secretkey=\"sk_test_v20NmZyNCFKN87UaFEQLaZPX00YJdX1NC6\" plaid.clientid=\"5cdf1d3cd4530d0013fb9740\" stripe.secret=\"e307ccb34265035d22d1639a7415d5\" && firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "set-configuration": "firebase functions:config:get > .runtimeconfig.json"
+    "set-configuration": "firebase functions:config:get > .runtimeconfig.json",
+    "global-packages": "npm list -g --depth 0"
   },
   "engines": {
-    "node": "14"
+    "node": "16"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "@types/faker": "^5.5.9",
     "@types/stripe-v3": "^3.1.26",
