--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
     "ngx-custom-validators": "^8.0.0",
     "ngx-plaid-link": "^1.0.3",
     "ngx-stripe": "^11.1.0",
+    "rxfire": "^6.0.0",
     "rxjs": "~7.5.2",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1302.5",
     "@angular-devkit/build-angular": "^13.1.3",
     "@angular/cli": "~13.1.3",
     "@angular/compiler-cli": "~13.1.3",
@@ -73,10 +75,11 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^17.0.10",
+    "autoprefixer": "^10.4.2",
     "codelyzer": "^5.1.2",
-    "firebase-tools": "^10.1.2",
+    "firebase-tools": "^9.0.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^8.2.0",
+    "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~7.0.0",
@@ -88,8 +91,9 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "npm-run-all": "~4.1.5",
     "open": "^7.0.3",
+    "postcss": "^8.4.8",
     "protractor": "~7.0.0",
-    "tailwindcss": "^3.0.15",
+    "tailwindcss": "^3.0.23",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.3",
     "typescript": "~4.5.5"
