--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "quickapp",
   "version": "3.0.0",
-  "description": "ASP.NET Core 3.0/Angular 8 startup project template with complete login, user and role management. Plus other useful services for Quick Application Development",
+  "description": "Leonardo Neninger generic app.",
   "author": {
-    "name": "Ebenezer Monney",
-    "email": "info@ebenmonney.com",
-    "url": "https://www.ebenmonney.com/about"
+    "name": "Leonardo Neninger",
+    "email": "lneninger@hipalanet.com",
+    "url": "https://admin-app.com"
   },
   "license": "MIT",
-  "homepage": "https://www.ebenmonney.com/quickapp",
-  "repository": "https://github.com/emonney/quickapp.git",
+  "homepage": "hhttps://github.com/lneninger/admin-app",
+  "repository": "https://github.com/lneninger/admin-app.git",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open & ngtw",
+    "start": "ng serve --open",
+    "start-tailwind": "ng serve --open & ngtw",
     "start-fake": "ng serve -c serverfake --open & ngtw",
     "server-fake": "json-server --watch server-fake/db.json",
     "serve": "ng serve",
