--- a/functions/package.json
+++ b/functions/package.json
@@ -23,27 +23,25 @@
     "@types/stripe-v3": "^3.1.26",
     "axios": "0.21.4",
     "faker": "5.5.3",
-    "firebase-admin": "^10.0.0",
-    "firebase-functions": "^3.15.7",
-    "plaid": "9.9.0"
+    "firebase": "^9.6.10",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.19.0",
+    "cors": "^2.8.5",
+    "rxjs": "^7.4.0",
+    "body-parser": "1.19.0",
+    "nodemailer": "^6.7.0",
+    "plaid": "9.9.0",
+    "stripe": "8.181.0"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
-    "body-parser": "1.19.0",
-    "cors": "^2.8.5",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
-    "express": "4.17.1",
-    "firebase-admin": "^10.0.0",
-    "firebase-functions": "^3.15.7",
     "firebase-functions-test": "^0.3.3",
-    "nodemailer": "^6.7.0",
-    "rxjs": "^7.4.0",
-    "stripe": "8.181.0",
-    "typescript": "^3.8.0"
+    "typescript": "~4.5.5"
   },
   "private": true
 }
