--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickapp",
+  "name": "admin-app",
   "version": "3.0.0",
   "description": "Leonardo Neninger generic app.",
   "author": {
@@ -20,7 +20,7 @@
     "ngtw": "ngtw watch",
     "theme": "sass --watch --style=compressed --no-source-map src/app/assets/themes:src/assets/themes",
     "build": "ngtw build && ng build",
-    "build-prod": "ngtw build --purge && ng build -c production",
+    "build-prod": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -92,7 +92,7 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "npm-run-all": "~4.1.5",
     "open": "^7.0.3",
-    "postcss": "^8.4.8",
+    "postcss": "^8.4.12",
     "protractor": "~7.0.0",
     "tailwindcss": "^3.0.23",
     "ts-node": "~10.4.0",
