--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,20 +24,21 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v@main
+      - name: Checkout Repository
+        uses: actions/checkout@main
 
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Build production mode
         run: npm run build-prod
-        
+
       - name: Archive production artifact
         uses: actions/upload-artifact@main
         with:
           name: dist
           path: dist
-          
+
   deploy:
     name: Deploy
     needs: build
