--- a/functions/package.json
+++ b/functions/package.json
@@ -4,13 +4,14 @@
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch --preserveWatchOutput",
-    "serve": "npm run set-configuration-dev | npm run build:watch | firebase emulators:start --only firestore,functions,auth",
+    "serve": "npm run build:watch | firebase emulators:start --only firestore,functions,auth",
     "serve-seed": "npx ts-node emulatorseed.ts",
     "serve-all": "npm run build:watch && firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase functions:config:set gmail.password=\"hiphop-usa2015\" gmail.email=\"lneninger@hipalanet.com\" stripe.apiversion=\"2020-08-27\" stripe.publickey=\"pk_test_iOFzxDfz6HHS7YLCWKlHrzIK005l1FQE5O\" stripe.secretkey=\"sk_test_v20NmZyNCFKN87UaFEQLaZPX00YJdX1NC6\" plaid.clientid=\"5cdf1d3cd4530d0013fb9740\" stripe.secret=\"e307ccb34265035d22d1639a7415d5\" && firebase deploy --only functions",
     "logs": "firebase functions:log",
+
     "set-configuration-dev": "firebase functions:config:get > .runtimeconfig.json",
     "global-packages": "npm list -g --depth 0",
     "port-process": "netstat -a -n -o | find \"port\"",
