--- a/functions/.runtimeconfig.json
+++ b/functions/.runtimeconfig.json
@@ -11,13 +11,13 @@
   "plaid": {
     "publickey": "f2697b9b441211ed4ee92df3850108",
     "clientid": "5cdf1d3cd4530d0013fb9740",
-    "environment": "sandbox"
+    "environment": "sandbox",
+    "secret":"2a2136eb3f664f56e10f8417e45d42"
   },
   "stripe": {
     "apiversion": "2020-08-27",
     "secretkey": "sk_test_v20NmZyNCFKN87UaFEQLaZPX00YJdX1NC6",
-    "publickey": "pk_test_iOFzxDfz6HHS7YLCWKlHrzIK005l1FQE5O",
-    "secret": "e307ccb34265035d22d1639a7415d5"
+    "publickey": "pk_test_iOFzxDfz6HHS7YLCWKlHrzIK005l1FQE5O"
   },
   "email": {
     "password": "hiphop-usa2015",
