--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ Thumbs.db
 .cache/
 functions/firebase-debug.log
 functions/firestore-debug.log
+functions/firebase-debug.log
+functions/firestore-debug.log
+functions/ui-debug.log
