remove changeDetention strategy

--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "serve-seed": "npx ts-node emulatorseed.ts",
     "serve-all": "npm run build:watch && firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
+    "start": "npm run serve",
+    "start_old": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
     "set-configuration-dev": "firebase functions:config:get > .runtimeconfig.json",
