--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ Thumbs.db
 .cache/
 functions/firebase-debug.log
 functions/firestore-debug.log
-functions/firebase-debug.log
-functions/firestore-debug.log
+functions/database-debug.log
+functions/pubsub-debug.log
+functions/firestorage-debug.log
 functions/ui-debug.log
