--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@stripe/stripe-js": "^1.19.1",
     "angular-oauth2-oidc": "^10.0.3",
     "firebase": "^9.6.8",
+    "guid-ts": "^1.1.2",
     "immer": "^9.0.12",
     "libphonenumber-js": "^1.8.5",
     "moment": "^2.29.1",
@@ -95,6 +96,7 @@
     "postcss": "^8.4.12",
     "protractor": "~7.0.0",
     "tailwindcss": "^3.0.23",
+    "tailwindcss-textshadow": "^2.1.3",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.3",
     "typescript": "~4.5.5"
