--- a/functions/package.json
+++ b/functions/package.json
@@ -36,6 +36,7 @@
     "firebase-functions": "^3.19.0",
     "nodemailer": "^6.7.0",
     "plaid": "9.9.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
     "stripe": "9.1.0"
   },
