--- a/functions/package.json
+++ b/functions/package.json
@@ -27,7 +27,7 @@
     "@google-cloud/pubsub": "^2.19.0",
     "@types/faker": "^5.5.9",
     "@types/stripe-v3": "^3.1.26",
-    "axios": "0.21.4",
+    "axios": "^0.21.4",
     "body-parser": "1.19.0",
     "cors": "^2.8.5",
     "faker": "5.5.3",
