--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@angular/platform-browser": "~13.3.4",
     "@angular/platform-browser-dynamic": "~13.3.4",
     "@angular/router": "~13.3.4",
+    "@azure/core-auth": "^1.3.2",
+    "@azure/msal-node": "^1.9.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngxs/devtools-plugin": "^3.7.3",
     "@ngxs/storage-plugin": "^3.7.3",
