--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
+    "test": "jest -o",
     "build:watch": "tsc --watch --preserveWatchOutput",
     "serve": "npm run build:watch | firebase emulators:start --only firestore,functions,auth,pubsub  --inspect-functions",
     "serve-seed": "npx ts-node emulatorseed.ts",
@@ -39,9 +40,12 @@
     "plaid": "9.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
-    "stripe": "9.1.0"
+    "stripe": "9.1.0",
+    "ts-node": "^8.10.2"
   },
   "devDependencies": {
+    "@jest/globals": "^28.1.3",
+    "@types/jest": "^28.1.6",
     "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
@@ -49,6 +53,9 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.3.3",
+    "jasmine-ts": "^0.4.0",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "typescript": "~4.5.5"
   },
   "private": true
