--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,19 @@
       ]
     },
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Firebase Functions Jest Unit Test: current file",
+      //"env": { "NODE_ENV": "test" },
+      "program": "${workspaceFolder}/functions/node_modules/.bin/jest",
+      "args": ["${fileBasenameNoExtension}", "--config", "functions/jest.config.js"/*, "--passWithNoTests"*/],
+      "console": "integratedTerminal",
+      "disableOptimisticBPs": true,
+      "windows": {
+        "program": "${workspaceFolder}/functions/node_modules/jest/bin/jest"
+      }
+    },
+    {
       "type": "pwa-chrome",
       "request": "attach",
       "name": "[Admin]Launch Chrome - Attach to Karma",
