--- a/functions/package.json
+++ b/functions/package.json
@@ -44,6 +44,7 @@
     "ts-node": "^8.10.2"
   },
   "devDependencies": {
+    "@firebase/testing": "^0.20.11",
     "@jest/globals": "^28.1.3",
     "@types/jest": "^28.1.6",
     "@types/nodemailer": "^6.4.4",
