--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,14 +33,21 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Firebase Functions Jest Unit Test: current file",
-      "env": { "NODE_ENV": "test" },
-      "program": "${workspaceFolder}/functions/node_modules/.bin/jest",
-      "args": ["${fileBasenameNoExtension}", "--config", "functions/jest.config.js"/*, "--passWithNoTests"*/],
+      "name": "[Functions] Jasmine Test Debug",
+      "cwd": "${workspaceFolder}/functions",
+      "program": "node_modules/jasmine/bin/jasmine",
+      "runtimeArgs": [
+        "--trace-warnings",
+      ],
+      "args": [
+        "--config=jasmine.json",
+        "${file}"
+
+      ],
       "console": "integratedTerminal",
-      "disableOptimisticBPs": true,
-      "windows": {
-        "program": "${workspaceFolder}/functions/node_modules/jest/bin/jest"
+      "internalConsoleOptions": "neverOpen",
+      "env": {
+        "NODE_OPTIONS": "--loader=ts-node/esm"
       }
     },
     {
